fix bugs and update swagger file
