# app/controllers/users.controller.js
@@ -6,15 +6,14 @@ exports.create = async(req, res) => {
     if (req.body.name == "" || req.body.surname == "" || req.body.user_type == "")
         return res.status(400).json({ success: false, message: "Name, surname or user_type undefined." });
 
-    //count how many users have the sanme username and create one
-    var temp = 0;
-    let tempUsername = req.body.name + req.body.surname + temp.toString();
-    let n = await User.count({username: tempUsername}).exec();
-    while(n!=0){
+    //count how many users have the same username and create one
+    var temp=0;         //number to append in the username
+    let tempUsername;   //username
+    do{
         tempUsername = req.body.name + req.body.surname + temp.toString();
-        temp++;
         n = await User.count({username: tempUsername}).exec();
-    }
+        temp++;
+    }while(n!=0)
     
 
     //generator of a random password
@@ -30,7 +29,7 @@ exports.create = async(req, res) => {
     });
     await newUser.save();
 
-    return res.status(200).json({ success: true, message: "User created." });
+    return res.status(201).json({ success: true, message: "User created." });
 }
 
 exports.findAll = async(req, res) => {
@@ -38,7 +37,7 @@ exports.findAll = async(req, res) => {
     let users = await User.find({}).exec();
     //check if there are users
     if (!users)
-        return res.status(404).json({ success: false, message: "There are no Users" })
+        return res.status(204).json({ success: false, message: "There are no Users" })
 
     users = users.map((user) => {
         return {
@@ -64,7 +63,7 @@ exports.findStudents = async(req, res) => {
     let users = await User.find({ user_type: "Studente" }).exec();
     //check if there are students
     if (!users)
-        return res.status(404).json({ success: false, message: "There are no Students." })
+        return res.status(204).json({ success: false, message: "There are no Students." })
 
     users = users.map((user) => {
         return {
@@ -90,7 +89,7 @@ exports.findInstructors = async(req, res) => {
     let users = await User.find({ user_type: "Istruttore" }).exec();
     //check if there are instructors
     if (!users)
-        return res.status(404).json({ success: false, message: "There are no Instructors." })
+        return res.status(204).json({ success: false, message: "There are no Instructors." })
 
     users = users.map((user) => {
         return {
@@ -118,7 +117,7 @@ exports.delete = async(req, res) => {
     if (!user)
         return res.status(404).json({ success: false, message: "The user does not exist" })
 
-    return res.json({ success: true, messagge: "Cancellation done" });
+    return res.status(200).json({ success: true, messagge: "Cancellation done" });
 }
 
 exports.findOne = async(req, res) => {
@@ -157,27 +156,24 @@ exports.update = async(req, res) => {
     
     //check if the there was a change in the name or surname
     if(req.body.name.localeCompare(user.name)==0 && req.body.surname.localeCompare(user.surname)==0)
-        return res.status(200).json({ success: true, message: "User updated" })
-    
+        return res.status(409).json({ success: true, message: "User was not updated, name and surname were not changed" })
     
     //check if there are name, surname and user_type in the request
     if (req.body.name == "" || req.body.surname == "" || req.body.user_type == "")
         return res.status(400).json({ success: false, message: "Name, surname or user_type undefined" });
 
-    //count how many users have the sanme username and create one
-    var temp = 0;
-    let tempUsername = req.body.name + req.body.surname + temp.toString();
-    let n = await User.count({username: tempUsername}).exec();
-    while(n!=0){
+    //count how many users have the same username and create one
+    var temp=0;         //number to append in the username
+    let tempUsername;   //username
+    do{
         tempUsername = req.body.name + req.body.surname + temp.toString();
-        temp++;
         n = await User.count({username: tempUsername}).exec();
-    }
+        temp++;
+    }while(n!=0)
 
     //create the password
     let psw;
     //check if the password must to be change
-
     if (req.body.changePsw)
         psw = Math.random().toString(36).substring(2, 7);
     else
